mezzi table alignment fix

--- a/frontend_fleet/src/app/Mezzi/Components/home-mezzi/home-mezzi.component.css
+++ b/frontend_fleet/src/app/Mezzi/Components/home-mezzi/home-mezzi.component.css
@@ -9,8 +9,17 @@
   flex-direction: column;
   gap: 3vh;
 }
+.nVehicles-container{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 14px;
+}
 .table-container {
   height: 72vh;
+  display: flex;
+  align-items: flex-start;
+  overflow-y: scroll;
 }
 .title-main {
   font-weight: bold;
